# DJI2KMZ

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: bundle.rs  config.rs  dji.rs  kml.rs  lib.rs  naming.rs
native/: Cargo.toml
native/src/: app.rs  config.rs  dji.rs  main.rs
src/: app.rs  config.rs  dji.rs  kml.rs  main.rs  progress.rs
web/: Cargo.toml
web/src/: convert.rs  lib.rs
web/static/: index.html
web/static/logbook/: index.html  logbook.js
web/static/shared/: grouping.js  kml.js
web/static/viewer/: fs.js  grouping.js  index.html  kml.js  map.js  viewer.js
worker/: worker.js  wrangler.toml
