[workspace]
resolver = "3"
members = ["core", "native", "web"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
dji-log-parser = "0.5.7"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
thiserror = "2.0.19"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
